# latihan-bootcamp-ai-python

./: .gitignore  README.md
agent-streaming/: pyproject.toml
agent-streaming/app/: main.py  tools.py
agentic-workflow/: Makefile  research_context.txt  saran-workflow.txt
agentic-workflow/app/: main.py  main1.py  methods.py  schema.py  utils.py
fastapi-app/: .env  database.db  pyproject.toml
fastapi-app/alembic/: env.py
fastapi-app/alembic/versions/: 3b49140ecfe3_add_description_field_to_product.py  9c6fd6205702_init_sqlmodel_migrations.py
fastapi-app/app/: main.py
fastapi-app/app/core/: settings.py
fastapi-app/app/models/: database.py  engine.py
fastapi-app/app/router/: auth.py  product.py  stores.py
fastapi-app/app/schema/: auth.py  product.py
fastapi-basic/: pyproject.toml
fastapi-basic/app/: main.py
fastapi-day-5/: Makefile  main.py  pyproject.toml
fastapi-day-5/alembic/: env.py
fastapi-day-5/alembic/versions/: 0813dab9d712_init_book_member_and_borrowinghistory.py
fastapi-day-5/app/: main.py
fastapi-day-5/app/models/: engine.py  models.py
fastapi-day-5/app/router/: books.py
fastapi-day-5/app/schema/: book.py
fastapi-day-5/script/: seeder.py
learn-openai/: main.py  main2.py  pyproject.toml
learn-openai/app/: main.py
learn-openai/templates/: index.html  story.html
python-basic/: app.py  basic.py  condition.py  data_types.py  function.py  looping.py  operators.py
python-basic/lib/: __init__.py  check_discount.py  math_lib.py
typehint/: README.md  main.py  pyproject.toml
typehint/basic_type_hint/: basic_type_hint.py  (+3 more)
(+9 files in other folders)
