[project]
name = "fastapi-day-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 120
unsafe-fixes = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
preview = true